<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.AddPersonActivity">
    <EditText
        android:textSize="24sp"
        android:hint="@string/Name"
        android:id="@+id/name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:textSize="24sp"
        android:hint="@string/Surname"
        android:id="@+id/surname_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:textSize="24sp"
        android:hint="@string/PhoneNumber"
        android:id="@+id/phoneNumber_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:textSize="24sp"
        android:hint="@string/Company"
        android:id="@+id/company_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:textSize="24sp"
        android:hint="@string/Email"
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>
    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:text="@string/Save"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>